:bug: adds z-index so the button works

--- a/client/src/styles/components/home/_hero-section.scss
+++ b/client/src/styles/components/home/_hero-section.scss
@@ -59,6 +59,7 @@
 
   .begin-button {
     align-self: center;
+    z-index: 2;
   }
 
   @include md {
